Changed footer font-weight & fixed portfolio overlay text alignment

--- a/source/assets/_styles/layout/_footer.scss
+++ b/source/assets/_styles/layout/_footer.scss
@@ -2,6 +2,7 @@
   color: darken(#fff, 50%);
   padding: 2 * $small-spacing $base-spacing;
   font-size: 0.75rem;
+  font-weight: 500;
   background: $dark-gray;
 
   .wrap {
