--- a/source/assets/_styles/pages/_02-portfolio.scss
+++ b/source/assets/_styles/pages/_02-portfolio.scss
@@ -19,6 +19,7 @@
     position: relative;
     height: 25rem;
     background: $dark-gray;
+    text-align: center;
 
     @include min-width(large) {
       position: absolute;
